--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-
-<!DOCTYPE html>
 <html>
   <head>
     <title>Page Title</title>
@@ -9,5 +7,6 @@
     <h1>This is a Heading created by subbu</h1>
     <p>This is a paragraph.</p>
     <h2>at last pushed</h2>
+    <h3>another trying push</h3>
   </body>
 </html>
